IoT view engine

--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.less
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.less
@@ -383,18 +383,21 @@ h4.dev-title{
 .dev-add-items {
 }
 
-.dev-add-item {
+.dev-add-item,
+.dev-toolbox-item {
 	padding: 10px;
 	cursor: pointer;
-	border-bottom:1px solid @Grey200;
+	border-bottom: 1px solid @Grey200;
 }
 
-.dev-add-item:hover {
+.dev-add-item:hover,
+.dev-toolbox-item:hover {
 	background-color: @Info;
 	color: #FFF;
 }
 
-.dev-add-item-category {
+.dev-add-item-category,
+.dev-toolbox-item-category {
 	padding: 10px;
 	font-variant: small-caps;
 	font-weight: 700;
