--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.css
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.css
@@ -309,16 +309,19 @@ h4.dev-title {
 .template-toolbar .btn:hover {
   border-color: #e0e0e0;
 }
-.dev-add-item {
+.dev-add-item,
+.dev-toolbox-item {
   padding: 10px;
   cursor: pointer;
   border-bottom: 1px solid #eeeeee;
 }
-.dev-add-item:hover {
+.dev-add-item:hover,
+.dev-toolbox-item:hover {
   background-color: #03a9f4;
   color: #FFF;
 }
-.dev-add-item-category {
+.dev-add-item-category,
+.dev-toolbox-item-category {
   padding: 10px;
   font-variant: small-caps;
   font-weight: 700;
