IoT view designer save imlemented

--- a/Development/TomPIT.Templates.IoT.Design/Views/Ide/Designers/IoT/Stencil.cshtml
+++ b/Development/TomPIT.Templates.IoT.Design/Views/Ide/Designers/IoT/Stencil.cshtml
@@ -13,6 +13,6 @@
 
 	<div class="stencil" style="@style" data-select="true" data-move="true" data-resize="true" data-id="@Model.Element.Id">
 			<svg width="100%" height="100%">
-				@await Html.PartialAsync(Model.Element.View(), Model)
+				@await Html.PartialAsync(Model.Element.DesignView(), Model)
 			</svg>
 	</div>
