--- a/Development/TomPIT.Templates.IoT.Design/Views/Ide/Designers/IoT/Stencils/Rectangle.cshtml
+++ b/Development/TomPIT.Templates.IoT.Design/Views/Ide/Designers/IoT/Stencils/Rectangle.cshtml
@@ -1,5 +1,6 @@
 ﻿@model TomPIT.IoT.UI.Stencils.Shapes.RectangleModel
 
-<rect width="100%" height="100%" class="rect-design">
-
-</rect>
+	<svg width="100%" height="100%">
+		<rect width="100%" height="100%" class="rect-design">
+		</rect>
+	</svg>
