--- a/Development/TomPIT.Templates.IoT.Design/Views/Ide/Designers/IoT/Stencils/Text.cshtml
+++ b/Development/TomPIT.Templates.IoT.Design/Views/Ide/Designers/IoT/Stencils/Text.cshtml
@@ -1,5 +1,5 @@
 ﻿@model TomPIT.IoT.UI.Stencils.Shapes.TextModel
 
-<text class="text-design" x="0" y="15" >
+<div class="text-design">
 	@Model.Stencil.String
-</text>
+</div>
