--- a/Development/TomPIT.Templates.IoT/Views/IoT/Stencils/Text.cshtml
+++ b/Development/TomPIT.Templates.IoT/Views/IoT/Stencils/Text.cshtml
@@ -1,5 +1,5 @@
 ﻿@model TomPIT.IoT.UI.Stencils.Shapes.TextModel
 
 <text x="@Model.Stencil.Left" y="@Model.Stencil.Top" class="@Model.Stencil.Css" id="@Model.Stencil.Name">
-	@Model.Stencil.String
+	@Model.Text
 </text>
