--- a/Management/TomPIT.Management.UI/Views/Ide/Designers/DeploymentLoginForm.cshtml
+++ b/Management/TomPIT.Management.UI/Views/Ide/Designers/DeploymentLoginForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model TomPIT.Designers.DeploymentDesigner
+﻿@model TomPIT.Management.Deployment.ISignupDesigner
 
 <div class="mx-auto login-box">
 	<div class="info-box info">
