--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
@@ -132,9 +132,9 @@
 	padding:15px;
 }
 
-.package-body svg{
-	font-size:5rem;
-	color:@LightBlue300;
+.package-image svg {
+	font-size: 5rem;
+	color: @LightBlue300;
 }
 .package-footer {
 	border-top: 1px solid @Grey300;
@@ -238,4 +238,47 @@ li.metric-item.fail[data-detail="true"]{
 
 .log-item .status{
 	font-size:2rem;
+}
+
+.package-toolbar{
+	border-bottom:1px solid @Grey300;
+	padding-bottom:5px;
+	margin-bottom:5px;
+}
+
+.package-total{
+	font-size:1.25rem;
+	color:@Success;
+}
+
+.package-info-header{
+	margin-left:15px;
+	padding-left:15px;
+	border-left:1px solid @Info;
+}
+
+.package-price{
+	font-size:1.5rem;
+}
+
+.package-price hr{
+	margin-bottom:0;
+}
+
+.package-price small{
+	font-size:0.9rem;
+}
+
+.package-configuration{
+	border: 1px dotted @Info;
+	padding:15px;
+	background:@LightBlue50;
+}
+
+.package-configuration .title{
+	color:@Info;
+}
+
+.package-configuration label{
+	font-weight:700;
 }
