--- a/Management/TomPIT.Management.UI/Views/Ide/Designers/Deployment.cshtml
+++ b/Management/TomPIT.Management.UI/Views/Ide/Designers/Deployment.cshtml
@@ -1,77 +1,69 @@
 ﻿@model TomPIT.Management.Designers.DeploymentDesigner
 
-@if (Model.Account != null)
-{
-	<div class="p-1">
-		@Model.Account.Company
-		<div class="small float-right"><a href="#" id="aLogoff">logoff</a></div>
-		<hr />
-	</div>
-}
-else
-{
-	<div class="p-1">
-		<div class="small float-right"><a href="#" id="aLogin">login</a></div>
-		<hr />
-	</div>
+<script src="~/Assets/Scripts/Designers/deployment.js"></script>
 
-}
+<div id="deploymentDesigner">
+	@if (Model.Account != null)
+	{
+		<div class="p-1">
+			@Model.Account.Company
+			<div class="small float-right"><a href="#" id="aLogoff">logoff</a></div>
+			<hr />
+		</div>
+	}
+	else
+	{
+		<div class="p-1">
+			<div class="small float-right"><a href="#" id="aLogin">login</a></div>
+			<hr />
+		</div>
 
-@foreach (var i in Model.PublicPackages)
-{
-	<div class="package-card" data-id="@i.Token">
-		<div class="package-header">
-			<div class="title">
-				@i.Name
+	}
+
+	<div id="mainPackage" class="collapse">
+		<div class="doc-canvas">
+			<div class="paper">
+				<div class="btn-toolbar package-toolbar justify-content-between">
+					<div class="btn-group-sm">
+						<button type="button" id="btnShowList" title="return to packages" class="btn btn-sm btn-light"><i class="fal fa-arrow-left"></i></button>
+						<button type="button" id="btnInstallPackages" title="install package(s)" class="btn btn-sm btn-success"><i class="fal fa-download"></i></button>
+					</div>
+					<div class="btn-group-sm pt-2">
+						<small class="pr-1">total</small><span class="package-total">0€</span>
+					</div>
+				</div>
+				<div id="packageContent">
+
+				</div>
 			</div>
-			<small>
-				@i.Company
-			</small>
-		</div>
-		<div class="package-body">
-			<i class="fal fa-share-alt"></i>
-		</div>
-		<div class="package-footer">
-			<button type="button" class="btn btn-sm btn-success" data-button="install">Install</button>
 		</div>
 	</div>
-}
+	<div id="packagePeek" class="collapse">
+
+	</div>
+	<div id="packageList" class="collapse show">
+		@foreach (var i in Model.PublicPackages)
+		{
+			<div class="package-card" data-id="@i.Token">
+				<div class="package-header">
+					<div class="title">
+						@i.Name
+					</div>
+					<small>
+						@i.Company
+					</small>
+				</div>
+				<div class="package-body package-image">
+					<i class="fal fa-share-alt"></i>
+				</div>
+				<div class="package-footer">
+					<button type="button" class="btn btn-sm btn-success" data-button="install">Install</button>
+				</div>
+			</div>
+		}
+	</div>
+</div>
 
 <script>
-	$('[data-button="install"]').click(function () {
-		var package = $(this).closest('[data-id]').attr('data-id');
-
-		ide.designerAction({
-			'data': {
-				'action': 'install',
-				'package': package
-			},
-			onComplete: function (data) {
-				$('#devDesigner').html(data);
-			}
-		});
-	})
-
-	$('#aLogoff').click(function () {
-		ide.designerAction({
-			data: {
-				'action': 'logoff'
-			},
-			onComplete: function (data) {
-				$('#devDesigner').html(data);
-			}
-		})
-	});
-
-	$('#aLogin').click(function () {
-		ide.designerAction({
-			data: {
-				'action': 'login'
-			},
-			onComplete: function (data) {
-				$('#devDesigner').html(data);
-			}
-		})
-	});
-
+	var deploymentDesigner = $('#deploymentDesigner').tpDeployment().data('tompit-tpDeployment');
 </script>
