--- a/Management/TomPIT.Management.UI/Views/Ide/Designers/DeploymentPackage.cshtml
+++ b/Management/TomPIT.Management.UI/Views/Ide/Designers/DeploymentPackage.cshtml
@@ -1,20 +1,75 @@
 ﻿@model TomPIT.Management.Designers.DeploymentDesigner
 
 @{
-	var config = Model.SelectConfiguration(Model.PackageInfo.Token);
+	var shellVersionInfo = string.Empty;
+
+	var v = new Version(Model.PackageInfo.ShellMajor, Model.PackageInfo.ShellMinor, Model.PackageInfo.ShellBuild, Model.PackageInfo.ShellRevision);
+
+	if (v < Shell.Version)
+	{
+		shellVersionInfo = "for older version";
+	}
+	else if (v > Shell.Version)
+	{
+		shellVersionInfo = "for newer version";
+	}
 }
 
-<div class="doc-canvas">
-	<div class="paper">
-		<div class="media">
-			<i class="fal fa-share-alt"></i>
-			<div class="media-body">
-				<h5 class="mt-0">@Model.PackageInfo.Name</h5>
+<div class="media">
+	<div class="package-image mr-2">
+		<i class="fal fa-share-alt"></i>
+	</div>
+	<div class="media-body package-info-header">
+		<div class="row">
+			<div class="col-lg-10">
+				<div>@Model.PackageInfo.Name</div>
+				<h5 class="mt-0">
+					@Model.PackageInfo.Title @if (Model.PackageInfo.Scope == TomPIT.Deployment.PackageScope.Private)
+					{
+						<small>
+							<span class="badge badge-info">private</span>
+						</small>
+					}
+				</h5>
+				<div>
+					@Html.Raw(string.Format("{0}.{1}.{2}.{3}, {4}", Model.PackageInfo.Major, Model.PackageInfo.Minor, Model.PackageInfo.Build, Model.PackageInfo.Revision, Model.PackageInfo.Created.ToLongDateString()))
+				</div>
 
+				@if (!string.IsNullOrWhiteSpace(shellVersionInfo))
+				{
+					<div>
+						@Html.Raw(string.Format("{0} ({1}->{2})", shellVersionInfo, Shell.Version.ToString(), v.ToString()))
+					</div>
+				}
+				@if (!string.IsNullOrWhiteSpace(Model.PackageInfo.Website))
+				{
+					<a href="@Model.PackageInfo.Website" target="_blank">@Model.PackageInfo.Company</a>
+				}
+				else
+				{
+					<div>
+						@Model.PackageInfo.Company
+					</div>
+				}
+			</div>
+			<div class="col-lg-2">
+				<div class="text-center package-price">
+					@Html.Raw(StringUtils.Currency(Model.PackageInfo.Price, CurrencyType.Euro, 0))
+					<hr />
+					<small>
+						Price
+					</small>
+				</div>
 			</div>
 		</div>
 	</div>
+
+
 </div>
+<hr />
 
+@await Html.PartialAsync("~/Views/Ide/Designers/DeploymentConfiguration.cshtml", new TomPIT.Management.Models.DeploymentConfigurationModel(Model.PackageInfo.Token, Model))
 
-@Html.Raw(config.RuntimeConfiguration)
+<script>
+	deploymentDesigner.setMainPackage('@Model.PackageInfo.Token');
+</script>
