--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
@@ -282,3 +282,10 @@ li.metric-item.fail[data-detail="true"]{
 .package-configuration label{
 	font-weight:700;
 }
+
+.package-configuration a.resource-group-dropdown {
+	padding-top: 0;
+	padding-bottom: 0;
+	font-size: 0.8rem;
+	color:@BodyColor;
+}
