--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.css
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.css
@@ -222,3 +222,9 @@ li.metric-item.fail[data-detail="true"] {
 .package-configuration label {
   font-weight: 700;
 }
+.package-configuration a.resource-group-dropdown {
+  padding-top: 0;
+  padding-bottom: 0;
+  font-size: 0.8rem;
+  color: #616161;
+}
