--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
@@ -289,3 +289,13 @@ li.metric-item.fail[data-detail="true"]{
 	font-size: 0.8rem;
 	color:@BodyColor;
 }
+
+[data-kind="connection-string"],
+[data-kind="database-enabled"],
+[data-kind="runtime-configuration"] {
+	cursor: pointer;
+}
+
+.not-enabled{
+	color:@Grey400;
+}
