--- a/App/TomPIT.App.UI/Views/Shared/DefaultMaster.cshtml
+++ b/App/TomPIT.App.UI/Views/Shared/DefaultMaster.cshtml
@@ -4,47 +4,47 @@
 
 <html>
 <head>
-    <title>@Model.Title</title>
-    @await Html.PartialAsync("~/Views/Shared/Header.cshtml")
-    @RenderSection("head", false)
+	<title>@ViewBag.Title</title>
+	@await Html.PartialAsync("~/Views/Shared/Header.cshtml")
+	@RenderSection("head", false)
 </head>
 
 <body>
-    @await Html.PartialAsync("~/Views/Shared/ContentInit.cshtml", Model)
-    <nav class="navbar navbar-dark bg-dark fixed-top" id="#_nav">
-        <button class="navbar-toggler collapsed brand-toggler" type="button" data-toggle="collapse" data-target="#_sideBar" id="_navtoggler">
-            <img src="~/Assets/Images/Shell/Brand.png" class="img-fluid brand-img" />
-        </button>
-		 
-        <div class="navbar-title mr-md-auto m-auto ml-md-0">
-            <div class="view-title text-truncate">
-                @Html.Raw(Model.Title)
-					
-                <div class="view-breadcrumb text-truncate">
-                    @await Html.PartialAsync("~/Views/Shared/Breadcrumbs.cshtml", Model)
-                </div>
-            </div>
-        </div>
+	@await Html.PartialAsync("~/Views/Shared/ContentInit.cshtml", Model)
+	<nav class="navbar navbar-dark bg-dark fixed-top" id="#_nav">
+		<button class="navbar-toggler collapsed brand-toggler" type="button" data-toggle="collapse" data-target="#_sideBar" id="_navtoggler">
+			<img src="~/Assets/Images/Shell/Brand.png" class="img-fluid brand-img" />
+		</button>
 
-        @await Html.PartialAsync("~/Views/Shared/HeaderIdentity.cshtml", Model)
-    </nav>
+		<div class="navbar-title mr-md-auto m-auto ml-md-0">
+			<div class="view-title text-truncate">
+				@Html.Raw(ViewBag.Title)
 
-    <div class="container-fluid sys-container h-100" id="_sysBody">
-        <div class="row content-area no-gutters h-100">
-            <div class="sidebar collapse" id="_sideBar">
-                @* @Html.Partial("~/Views/Layouts/Partial/SysNavigation.cshtml", Model)*@
-            </div>
-            <div class="col" id="_sysContent">
-                @RenderBody()
-            </div>
-        </div>
-    </div>
-    @RenderSection("Scripts", false)
-    <environment include="Staging,Production">
-        <script src="~/Assets/scripts.foot.min.js"></script>
-    </environment>
-    <environment include="Development">
-        <script src="~/Assets/Scripts/foot.js"></script>
-    </environment>
+				<div class="view-breadcrumb text-truncate">
+					@await Html.PartialAsync("~/Views/Shared/Breadcrumbs.cshtml", Model)
+				</div>
+			</div>
+		</div>
+
+		@await Html.PartialAsync("~/Views/Shared/HeaderIdentity.cshtml", Model)
+	</nav>
+
+	<div class="container-fluid sys-container h-100" id="_sysBody">
+		<div class="row content-area no-gutters h-100">
+			<div class="sidebar collapse" id="_sideBar">
+				@* @Html.Partial("~/Views/Layouts/Partial/SysNavigation.cshtml", Model)*@
+			</div>
+			<div class="col" id="_sysContent">
+				@RenderBody()
+			</div>
+		</div>
+	</div>
+	@RenderSection("Scripts", false)
+	<environment include="Staging,Production">
+		<script src="~/Assets/scripts.foot.min.js"></script>
+	</environment>
+	<environment include="Development">
+		<script src="~/Assets/Scripts/foot.js"></script>
+	</environment>
 </body>
 </html>
