Folder authorization implemented

--- a/App/TomPIT.App.UI/Views/Shared/DefaultMaster.cshtml
+++ b/App/TomPIT.App.UI/Views/Shared/DefaultMaster.cshtml
@@ -5,6 +5,7 @@
 <html>
 <head>
 	<title>@ViewBag.Title</title>
+	@await Html.PartialAsync("~/Views/Shared/StandardHeaders.cshtml")
 	@await Html.PartialAsync("~/Views/Shared/Header.cshtml")
 	@RenderSection("head", false)
 </head>
